# lumin-repo-lens-lab

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.ko.md  README.md  README.plugin-package.md  SKILL.canon.md  SKILL.codex.md  SKILL.md  SKILL.write-gate.md  any-inventory.mjs  audit-repo.mjs  build-block-clone-index.mjs  build-call-graph.mjs  build-entry-surface.mjs  build-framework-resource-surfaces.mjs  build-function-clone-index.mjs  build-inline-pattern-index.mjs  build-module-reachability.mjs  build-resolver-diagnostics.mjs  build-shape-index.mjs  build-symbol-graph.mjs  build-unused-deps.mjs  check-barrel-discipline.mjs  check-canon.mjs  checklist-facts.mjs  classify-dead-exports.mjs  compare-repos.mjs  emit-sarif.mjs  eslint.config.mjs  export-action-safety.mjs  generate-canon-draft.mjs  measure-discipline.mjs  measure-staleness.mjs  measure-topology.mjs  merge-runtime-evidence.mjs  p6-measurement.mjs  package-lock.json  package.json  (+6 more)
experiments/rust-common/: Cargo.toml
experiments/rust-common/src/: cli.rs  error.rs  hash.rs  json.rs  lib.rs  path.rs
experiments/rust-common/src/tests/: atomic_write.rs  hash.rs  mod.rs  support.rs  usage.rs
experiments/rust-common/src/tests/path/: canonical_dir.rs  mod.rs  repo_root.rs  segment.rs
experiments/rust-main/lumin-audit-core/: Cargo.toml
experiments/rust-main/lumin-audit-core/src/: artifact_measurement.rs  artifact_read_metrics.rs  artifact_registry.rs  artifact_summaries.rs  audit_review_pack.rs  audit_summary.rs  barrel_discipline.rs  block_clones.rs  call_graph.rs  canon_draft_lifecycle.rs  checklist_facts.rs  cli.rs  compare_repos.rs  dead_classify.rs  discipline.rs  framework_resource_surfaces.rs  generated_artifacts.rs  js_ts_extract.rs  js_ts_pre_write.rs  lib.rs  lifecycle.rs  lifecycle_exit_policy.rs  living_audit.rs  manifest_companion.rs  manifest_core.rs  manifest_evidence.rs  manifest_final.rs  manifest_root.rs  module_reachability.rs  orchestration_events.rs  orchestration_executor.rs  orchestration_plan.rs  orchestration_result.rs  post_write_lifecycle.rs  pre_write_intent.rs  pre_write_lifecycle.rs  pre_write_routing.rs  producer_performance.rs  rank_fixes.rs  relative_source_resolver.rs  (+12 more)
experiments/rust-main/lumin-audit-core/src/audit_review_pack/: protocol.rs  review_checks.rs  support.rs
experiments/rust-main/lumin-audit-core/src/audit_summary/: lifecycle.rs  measured_cues.rs  protocol.rs  sections.rs
experiments/rust-main/lumin-audit-core/src/blind_zones/: language.rs  policy.rs  precision.rs  resolver.rs  value.rs
experiments/rust-main/lumin-audit-core/src/block_clones/: groups.rs  policy.rs  projection.rs  tests.rs
experiments/rust-main/lumin-audit-core/src/checklist_facts/: function_size.rs  presentation.rs  protocol.rs  value_support.rs
experiments/rust-main/lumin-audit-core/src/cli/: args.rs  artifact.rs  audit_review_pack.rs  audit_summary.rs  barrel_discipline.rs  contract.rs  dead_classify.rs  discipline.rs  io_support.rs  js_ts_pre_write.rs  lifecycle.rs  manifest.rs  mod.rs  module_reachability.rs  orchestration.rs  resolver_diagnostics_artifacts.rs  runtime_evidence.rs  sfc_file_facts.rs  shape_index.rs  source_use_assembly.rs  symbol_graph.rs  topology.rs  unused_deps.rs  usage.rs
experiments/rust-main/lumin-audit-core/src/function_clones/: facts.rs  groups.rs  projection.rs  tests.rs
experiments/rust-main/lumin-audit-core/src/js_ts_extract/: ast_support.rs  cjs.rs  function_signature.rs  inline_patterns.rs  module_uses.rs  protocol.rs  surfaces.rs  tests.rs  type_escape.rs  vue_global_components.rs
experiments/rust-main/lumin-audit-core/src/js_ts_pre_write/: cache.rs  host_transport.rs  input.rs  projection.rs  protocol.rs  tests.rs  (+1 more)
experiments/rust-main/lumin-audit-core/tests/: artifact_measurement.rs  artifact_read_metrics.rs  artifact_summaries.rs  audit_review_pack.rs  audit_summary.rs  blind_zones.rs  block_clones.rs  call_graph.rs  canon_draft_lifecycle.rs  check_canon_lifecycle.rs  checklist_facts.rs  compare_repos.rs  dead_classify.rs  discipline.rs  function_clones.rs  generated_artifacts.rs  integration.rs  js_ts_extract.rs  lifecycle.rs  lifecycle_exit_policy.rs  lifecycle_request.rs  living_audit.rs  manifest_companion.rs  manifest_core.rs  manifest_evidence.rs  manifest_final.rs  manifest_meta.rs  manifest_root.rs  module_reachability.rs  orchestration_events.rs  orchestration_executor.rs  orchestration_plan.rs  orchestration_result.rs  post_write_lifecycle.rs  pre_write_lifecycle.rs  pre_write_routing.rs  producer_performance.rs  rank_fixes.rs  resolver_diagnostics.rs  resolver_diagnostics_artifacts.rs  (+7 more)
experiments/rust-main/lumin-rust-analyzer/: Cargo.toml
experiments/rust-main/lumin-rust-analyzer/src/: calibration.rs  cli.rs  main.rs  oracle_targeting.rs  policy.rs  prewrite.rs  product_artifact.rs  product_files.rs  product_summary.rs  syntax_phase.rs
experiments/rust-main/lumin-rust-analyzer/tests/: integration.rs  unified_cli.rs
experiments/rust-main/rust-cargo-oracle/: Cargo.toml
experiments/rust-main/rust-cargo-oracle/src/: artifact.rs  cargo_json.rs  classify.rs  command.rs  config.rs  driver.rs  environment.rs  input_hash.rs  lib.rs  main.rs  metadata.rs  options.rs  oracle_plan.rs  ownership.rs  path_util.rs  protocol.rs  rustc_diagnostic.rs  rustc_span.rs  scope.rs  target_selection.rs  toolchain.rs  util.rs
experiments/rust-main/rust-cargo-oracle/tests/: integration.rs  oracle_runner.rs  registry_contract.rs
experiments/rust-sidecar/rust-source-health/: Cargo.toml
experiments/rust-sidecar/rust-source-health/src/: analyzer.rs  dead_exports.rs  function_clones.rs  lib.rs  locations.rs  main.rs  parallel.rs  path_policy.rs  protocol.rs  signals.rs  summary.rs  wrapper.rs
experiments/rust-sidecar/rust-source-health/tests/: health.rs  integration.rs
experiments/rust-sidecar/topology-scanner/: Cargo.toml
experiments/rust-sidecar/topology-scanner/src/: lib.rs  main.rs  protocol.rs  scanner.rs
experiments/rust-sidecar/topology-scanner/tests/: integration.rs  parity.rs
skills/lumin-repo-lens-lab/_engine/rust/: Cargo.toml
(+2097 files in other folders)
