[package]
name = "lumin-rust-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
hash = ["dep:sha2"]
json = ["dep:serde", "dep:serde_json"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
