[package]
name = "lumin-audit-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lumin-audit-core"
path = "src/main.rs"
test = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
lumin-rust-common = { workspace = true, features = ["hash", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
