[package]
name = "lumin-rust-analyzer"
version = "0.0.0-lab.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
lumin-rust-cargo-oracle = { path = "../rust-cargo-oracle" }
lumin-rust-source-health = { path = "../../rust-sidecar/rust-source-health" }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile = "3"
