[package]
name = "lumin-rust-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lumin-rust-analyzer"
path = "src/main.rs"
test = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
lumin-rust-cargo-oracle = { workspace = true }
lumin-rust-common = { workspace = true, features = ["json"] }
lumin-rust-source-health = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting"] }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
