[package]
name = "lumin-rust-source-health"
version = "0.0.0-lab.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
ra_ap_syntax = "=0.0.337"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile = "3"
