[package]
name = "lumin-topology-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lumin-topology-scanner"
path = "src/main.rs"
test = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
lumin-rust-common = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
