[package]
name = "lumin-audit-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lumin-audit-core"
path = "src/main.rs"
test = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
lumin-rust-common = { workspace = true, features = ["hash", "json"] }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
